--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
       // Add mountains
       const mountains = [
-        { x: 10, height: 5 },
-        { x: 40, height: 7 },
+        { x: 35, height: 8 },
+        { x: 40, height: 10 },
         { x: 80, height: 6 },
         { x: 120, height: 8 },
         { x: 160, height: 5 },
@@ -228,7 +228,7 @@
       function renderCanvas(cameraX) {
         for (let y = 0; y < canvasHeight; y++) {
           for (let x = 0; x < canvasWidth; x++) {
-            canvas[y][x] = " ";
+            canvas[y][x] = "´";
           }
         }
 
