--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       function renderCanvas(cameraX) {
         for (let y = 0; y < canvasHeight; y++) {
           for (let x = 0; x < canvasWidth; x++) {
-            canvas[y][x] = "´";
+            canvas[y][x] = " ";
           }
         }
 
