dont remove spike enemies on collision

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       const keysPressed = {};
       let gameRunning = true;
       let ascii = `.__..._____.._..._..__........_____.._..._._.<br/>
-.\.\././._.\|.|.|.|.\.\.....././._.\|.\.|.|.|<br/>
-..\.V./.|.|.|.|.|.|..\.\./\././.|.|.|..\|.|.|<br/>
-...|.||.|_|.|.|_|.|...\.V..V./|.|_|.|.|\..|_|<br/>
-...|_|.\___/.\___/.....\_/\_/..\___/|_|.\_(_)<br/>
-.............................................`;
+      .\.\././._.\|.|.|.|.\.\.....././._.\|.\.|.|.|<br/>
+      ..\.V./.|.|.|.|.|.|..\.\./\././.|.|.|..\|.|.|<br/>
+      ...|.||.|_|.|.|_|.|...\.V..V./|.|_|.|.|\..|_|<br/>
+      ...|_|.\___/.\___/.....\_/\_/..\___/|_|.\_(_)<br/>
+      .............................................`;
       let cameraX = 0;
 
       // Add finish line position
@@ -284,7 +284,7 @@
             enemy.x >= cameraX &&
             enemy.x < cameraX + canvasWidth &&
             enemy.y < canvasHeight &&
-            !enemy.isCollided
+            !(enemy.isCollided && enemy.type === "E")
           ) {
             canvas[enemy.y][enemy.x - cameraX] = enemy.type; // Use the enemy type for rendering
           }
