chore: Refactor ASCII formatting for better readability

--- a/index.html
+++ b/index.html
@@ -30,12 +30,7 @@
       let yVelocity = 0;
       const keysPressed = {};
       let gameRunning = true;
-      let ascii = `.__..._____.._..._..__........_____.._..._._.<br/>
-      .\.\././._.\|.|.|.|.\.\.....././._.\|.\.|.|.|<br/>
-      ..\.V./.|.|.|.|.|.|..\.\./\././.|.|.|..\|.|.|<br/>
-      ...|.||.|_|.|.|_|.|...\.V..V./|.|_|.|.|\..|_|<br/>
-      ...|_|.\___/.\___/.....\_/\_/..\___/|_|.\_(_)<br/>
-      .............................................`;
+      let ascii = `<br/>.__..._____.._..._..__........_____.._..._._.<br/>.\.\././._.\|.|.|.|.\.\.....././._.\|.\.|.|.|<br/>..\.V./.|.|.|.|.|.|..\.\./\././.|.|.|..\|.|.|<br/>...|.||.|_|.|.|_|.|...\.V..V./|.|_|.|.|\..|_|<br/>...|_|.\___/.\___/.....\_/\_/..\___/|_|.\_(_)<br/>.............................................`;
       let cameraX = 0;
 
       // Add finish line position
