add more enemies

--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
 
       const platforms = [
         { x: 15, y: groundLevel - 4, width: 10 },
-        { x: 50, y: groundLevel - 6, width: 15 },
-        { x: 80, y: groundLevel - 8, width: 20 },
-        { x: 120, y: groundLevel - 5, width: 12 },
-        { x: 150, y: groundLevel - 7, width: 18 },
-        { x: 190, y: groundLevel - 9, width: 25 },
-        { x: 240, y: groundLevel - 6, width: 15 },
+        { x: 30, y: groundLevel - 6, width: 15 },
+        { x: 80, y: groundLevel - 4, width: 20 },
+        { x: 120, y: groundLevel - 4, width: 7 },
+        { x: 130, y: groundLevel - 6, width: 4 },
+        { x: 137, y: groundLevel - 8, width: 25 },
+        { x: 240, y: groundLevel - 4, width: 7 },
+        { x: 250, y: groundLevel - 4, width: 6 },
+        { x: 261, y: groundLevel - 4, width: 6 },
       ];
 
       const enemies = [
@@ -100,13 +102,104 @@
           type: "M",
         },
         {
+          x: 105,
+          y: groundLevel,
+          isCollided: false,
+          type: "M",
+        },
+        {
+          x: 110,
+          y: groundLevel,
+          isCollided: false,
+          type: "M",
+        },
+        {
           x: 180,
           y: groundLevel - 7,
           isCollided: false,
           type: "M",
         },
+
+        {
+          x: 185,
+          y: groundLevel,
+          isCollided: false,
+          type: "M",
+        },
+        {
+          x: 190,
+          y: groundLevel - 4,
+          isCollided: false,
+          type: "M",
+        },
+        {
+          x: 243,
+          y: groundLevel,
+          isCollided: false,
+          type: "M",
+        },
+        {
+          x: 244,
+          y: groundLevel,
+          isCollided: false,
+          type: "M",
+        },
+        {
+          x: 245,
+          y: groundLevel,
+          isCollided: false,
+          type: "M",
+        },
+        {
+          x: 246,
+          y: groundLevel,
+          isCollided: false,
+          type: "M",
+        },
+        {
+          x: 2477,
+          y: groundLevel,
+          isCollided: false,
+          type: "M",
+        },
+        {
+          x: 248,
+          y: groundLevel,
+          isCollided: false,
+          type: "M",
+        },
+        {
+          x: 249,
+          y: groundLevel,
+          isCollided: false,
+          type: "M",
+        },
         {
           x: 250,
+          y: groundLevel,
+          isCollided: false,
+          type: "M",
+        },
+        {
+          x: 251,
+          y: groundLevel,
+          isCollided: false,
+          type: "M",
+        },
+        {
+          x: 252,
+          y: groundLevel,
+          isCollided: false,
+          type: "M",
+        },
+        {
+          x: 253,
+          y: groundLevel,
+          isCollided: false,
+          type: "M",
+        },
+        {
+          x: 257,
           y: groundLevel,
           isCollided: false,
           type: "M",
