add you won iamge

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       let yVelocity = 0;
       const keysPressed = {};
       let gameRunning = true;
-      let ascii = `<br/>.__..._____.._..._..__........_____.._..._._.<br/>.\.\././._.\|.|.|.|.\.\.....././._.\|.\.|.|.|<br/>..\.V./.|.|.|.|.|.|..\.\./\././.|.|.|..\|.|.|<br/>...|.||.|_|.|.|_|.|...\.V..V./|.|_|.|.|\..|_|<br/>...|_|.\___/.\___/.....\_/\_/..\___/|_|.\_(_)<br/>.............................................`;
+      let ascii = `<img src="/ascii-text-art.png"/>`;
       let cameraX = 0;
 
       // Add finish line position
